# tuna

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  CLAUDE.md  manage.py  pyproject.toml  pyrightconfig.json
backend/apps/athletes/: apis.py  apps.py  models.py  selectors.py  services.py  tests.py  urls.py
backend/apps/athletes/migrations/: 0001_initial.py  0002_athlete_disabled.py  0002_athlete_events.py
backend/apps/common/: enums.py  models.py  pagination.py  permissions.py
backend/apps/common/tests/: test_api_wiring.py
backend/apps/dashboard/: apis.py  selectors.py  urls.py  views.py
backend/apps/events/: admin.py  apis.py  models.py  selectors.py  tests.py  urls.py
backend/apps/events/migrations/: 0001_initial.py  0002_alter_eventdata_start_time.py  0003_alter_eventdata_start_time.py  0004_eventdata_gender.py  0005_alter_eventdata_start_time.py
backend/apps/heats/: apps.py  models.py
backend/apps/heats/migrations/: 0001_initial.py
backend/apps/registrations/: apis.py  apps.py  models.py  selectors.py  services.py  tests.py  urls.py
backend/apps/registrations/migrations/: 0001_initial.py  0002_athleteregister_unique_athlete_event_per_stage.py
backend/apps/results/: apps.py  models.py
backend/apps/results/migrations/: 0001_initial.py
backend/apps/site_content/: admin.py  apis.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
backend/apps/site_content/migrations/: 0001_initial.py
backend/apps/stages/: admin.py  apis.py  apps.py  models.py  selectors.py  tests.py  urls.py
backend/apps/stages/migrations/: 0001_initial.py  0002_location_name.py  0003_alter_stage_end_time_alter_stage_start_time.py  0004_stage_registration_deadline_stage_registration_opens.py  (+1 more)
backend/apps/universities/: admin.py  apis.py  apps.py  filters.py  models.py  selectors.py  serializers.py  services.py  urls.py
backend/apps/users/: admin.py  models.py  services.py
backend/config/: urls.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/templates/registration/: password_reset_email.html  password_reset_subject.txt
backend/tuna/: asgi.py  urls.py  wsgi.py
backend/tuna/settings/: base.py  development.py  production.py
frontend/: index.html  (+2 more)
(+35 files in other folders)
