[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=6.0,<6.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "django-types>=0.24.0",
    "djangorestframework-types>=0.9.0",
    "factory-boy>=3.3.3",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
# Settings modules intentionally use star imports to compose environments.
"config/settings/*" = ["F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["apps"]
addopts = "--strict-markers"
