[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade,
# DJ flake8-django, C4 comprehensions, SIM simplify
select = ["E", "W", "F", "I", "B", "UP", "DJ", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]
"**/settings/*" = ["F403", "F405", "E501"]  # star import + long dotted paths

[tool.ruff.format]
quote-style = "double"
